# cf-mail

./: README.md  pyproject.toml
cf_mail/: __init__.py  client.py  setup.py
examples/: basic_usage.py  batch_register.py
worker/: package.json  supabase_schema.sql  wrangler.toml
worker/src/: worker.js
