[project]
name = "cf-mail"
version = "0.1.0"
description = "Zero-cost disposable email service powered by Cloudflare Email Routing + Workers + KV"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
keywords = ["cloudflare", "email", "disposable", "verification", "otp"]
dependencies = [
    "requests>=2.28.0",
]

[project.optional-dependencies]
setup = [
    "requests>=2.28.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["cf_mail*"]
